{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 288,
  "lineage": "99663583-2615-143f-8a73-8ed61766ff7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:internet-gateway/igw-0203dede5dd12858e",
            "id": "igw-0203dede5dd12858e",
            "owner_id": "689587120140",
            "tags": {
              "Name": "igw_web"
            },
            "tags_all": {
              "Name": "igw_web"
            },
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0203dede5dd12858e",
            "id": "r-rtb-02df1c0186b0fb6b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02df1c0186b0fb6b2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_web",
            "aws_route_table.rt_web",
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:route-table/rtb-02df1c0186b0fb6b2",
            "id": "rtb-02df1c0186b0fb6b2",
            "owner_id": "689587120140",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0733df88e0e066a01",
            "route_table_id": "rtb-02df1c0186b0fb6b2",
            "subnet_id": "subnet-02685a92c7d068fd0"
          },
          "dependencies": [
            "aws_route_table.rt_web",
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_B",
            "aws_vpc.vpc_web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f94e103fef29be5",
            "route_table_id": "rtb-02df1c0186b0fb6b2",
            "subnet_id": "subnet-089f7d95ac4f6e296"
          },
          "dependencies": [
            "aws_route_table.rt_web",
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_B",
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-02685a92c7d068fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02685a92c7d068fd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_A"
            },
            "tags_all": {
              "Name": "public_subnet_A"
            },
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:subnet/subnet-089f7d95ac4f6e296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089f7d95ac4f6e296",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "689587120140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_B"
            },
            "tags_all": {
              "Name": "public_subnet_B"
            },
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:vpc/vpc-0563f1ec43c9d91a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c00e91a6d9978a39",
            "default_route_table_id": "rtb-0654f3f84767e9add",
            "default_security_group_id": "sg-0e375d43d454432f6",
            "dhcp_options_id": "dopt-06ccb9d9cee9df1e4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0563f1ec43c9d91a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0654f3f84767e9add",
            "owner_id": "689587120140",
            "tags": {
              "Environment": "Development",
              "Name": "day26terraform",
              "Project": "TerraformProject"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "day26terraform",
              "Project": "TerraformProject"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-06138c9cdee6182c2",
            "description": "allow traffic from port 80 \u0026 allow all outgoing traffic",
            "egress": [],
            "id": "sg-06138c9cdee6182c2",
            "ingress": [],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver_sg"
            },
            "tags_all": {
              "Name": "webserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic to internet",
            "from_port": 0,
            "id": "sgrule-1419942037",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06138c9cdee6182c2",
            "security_group_rule_id": "sgr-053671958ca0d8884",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.ec2.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_https_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS access",
            "from_port": 443,
            "id": "sgrule-2182970718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06138c9cdee6182c2",
            "security_group_rule_id": "sgr-0e3749cabe5e7ba7e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.ec2.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_ssh_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH access",
            "from_port": 22,
            "id": "sgrule-1867072174",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06138c9cdee6182c2",
            "security_group_rule_id": "sgr-00ad85fff792d2ce3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.ec2.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_tcp_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP from Web ELB",
            "from_port": 80,
            "id": "sgrule-3653443355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06138c9cdee6182c2",
            "security_group_rule_id": "sgr-02efdee8ba185b0cb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.ec2.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/7d96199b5fbea5b3",
            "arn_suffix": "app/frontend-lb/7d96199b5fbea5b3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-lb-1908239469.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/7d96199b5fbea5b3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-028f2846e6657a077"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02685a92c7d068fd0"
              },
              {
                "subnet_id": "subnet-089f7d95ac4f6e296"
              }
            ],
            "subnets": [
              "subnet-02685a92c7d068fd0",
              "subnet-089f7d95ac4f6e296"
            ],
            "vpc_id": "vpc-0563f1ec43c9d91a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_B",
            "aws_vpc.vpc_web",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontendListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/7d96199b5fbea5b3/5d18114e315241e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/8929dce533f58c9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:listener/app/frontend-lb/7d96199b5fbea5b3/5d18114e315241e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:loadbalancer/app/frontend-lb/7d96199b5fbea5b3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_A",
            "aws_subnet.public_subnet_B",
            "aws_vpc.vpc_web",
            "module.elb.aws_lb.frontend_lb",
            "module.elb.aws_lb_target_group.frontendTG",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontendTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/8929dce533f58c9b",
            "arn_suffix": "targetgroup/frontendTG/8929dce533f58c9b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:689587120140:targetgroup/frontendTG/8929dce533f58c9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontendTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group/sg-028f2846e6657a077",
            "description": "Allow traffic from the internet \u0026 allow all outgoing traffic to webservers",
            "egress": [],
            "id": "sg-028f2846e6657a077",
            "ingress": [],
            "name": "web_elb_sg",
            "name_prefix": "",
            "owner_id": "689587120140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_elb_sg"
            },
            "tags_all": {
              "Name": "web_elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0563f1ec43c9d91a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound_webelb_web_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1823359548",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-028f2846e6657a077",
            "security_group_rule_id": "sgr-02a77778c156b46da",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_webelb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:689587120140:security-group-rule/sgr-0b54b54296f3bc74a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b54b54296f3bc74a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-028f2846e6657a077",
            "security_group_rule_id": "sgr-0b54b54296f3bc74a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_web",
            "module.elb.aws_security_group.web_elb_sg"
          ]
        }
      ]
    }
  ]
}